<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="br.com.customapp.viewmodels.EventViewModel" />

        <variable
            name="handler"
            type="br.com.customapp.views.fragments.EventDetailFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.eventLoaded, default=visible}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical">

                            <me.grantland.widget.AutofitTextView
                                android:id="@+id/title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="center"
                                android:maxLines="1"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="40dp"
                                        android:layout_height="50dp"
                                        android:src="@drawable/ic_calendar" />

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="20dp"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/date"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:gravity="center"
                                            android:textSize="16sp"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/time"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:gravity="top|center"
                                            android:textSize="16sp"
                                            android:textStyle="bold" />

                                    </LinearLayout>

                                </LinearLayout>

                                <View
                                    style="@style/VerticalSeparator"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginRight="20dp" />

                                <Button
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:drawableLeft="@drawable/ic_check"
                                    android:gravity="center"
                                    android:onClick="@{viewModel::onClickCheckin}"
                                    android:text="@string/detail_checkin_label"
                                    android:textAllCaps="false"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="15dp" />

                            <View style="@style/HorizontalSeparator" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_pin" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/address"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="bottom"
                                        android:textSize="12sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/city"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:gravity="top"
                                        android:textSize="12sp"
                                        android:textStyle="bold" />

                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="15dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/checkinLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.checkinCount > 0 ? viewModel.checkinCount + ` comparecerão` : `Ninguém confirmou presença neste evento`}"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <View
                            style="@style/HorizontalSeparator"
                            android:layout_marginTop="10dp"
                            android:visibility="@{viewModel.checkinCount > 0 ? View.VISIBLE : View.GONE}" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/peopleList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="@{viewModel.checkinCount > 0 ? View.VISIBLE : View.GONE}"
                            tools:listitem="@layout/people_item" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="top|center"
            android:visibility="@{viewModel.loading, default=gone}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:clickable="true"
            android:visibility="@{viewModel.doCheckin, default=gone}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_top_stroke"
            android:clickable="true"
            android:visibility="@{viewModel.doCheckin, default=gone}">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:onClick="@{viewModel::onClickCheckin}"
                android:padding="5dp"
                android:src="@drawable/ic_close"
                android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}" />

            <LinearLayout
                android:id="@+id/checkinLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/checkin_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}">

                    <EditText
                        android:id="@+id/checkinName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/checkin_name_hint"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:text="@string/checkin_name_error"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="@{viewModel.nameError, default=gone}" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="@{viewModel.checkinLoading ? View.GONE : View.VISIBLE}">

                    <EditText
                        android:id="@+id/checkinEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/checkin_email_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkin_email_error"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="@{viewModel.emailError, default=gone}" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/checkin_error_response"
                    android:textColor="@color/red"
                    android:visibility="@{viewModel.onCheckinError, default=gone}" />

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.checkinLoading ? View.VISIBLE : View.GONE}" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>